# problem-details-rs

./: Cargo.toml  README.md
.helix/: languages.toml
examples/: actix.rs  axum-utoipa.rs  axum.rs  poem.rs  poem_openapi.rs
src/: actix.rs  axum.rs  extensions.rs  lib.rs  poem.rs  problem_details.rs  problem_type.rs  serde.rs
src/problem_details/: json.rs  tests.rs  xml.rs
