[package]
name = "problem_details"
version = "0.5.1"
authors = ["Markus Gasser <markus.gasser@mailbox.org>"]
edition = "2021"
description = "RFC 9457 / RFC 7807 problem details for HTTP APIs."
repository = "https://github.com/frenetisch-applaudierend/problem-details-rs"
license = "MIT OR Apache-2.0"
keywords = ["http", "problem-details", "rfc9457", "rfc7807"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
http = "0.2"

# Optional Dependencies
axum = { version = "0.6", default-features = false, features = ["json", "headers"], optional = true }
http-serde = { version = "1.1", default-features = false, optional = true }
poem = { version = "1.3", default-features = false, optional = true }
quick-xml = { version = "0.30", default-features = false, features = ["serialize"], optional = true }
serde = { version = "1.0", default-features = false, features = ["serde_derive"], optional = true }

[dev-dependencies]
axum = "0.6"
poem = "1.3"
serde_json = "1.0"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:http-serde"]
axum = ["dep:axum", "serde"]
poem = ["dep:poem", "serde"]
xml = ["dep:quick-xml", "serde", "poem?/xml"]

[[example]]
name = "axum"
required-features = ["axum", "xml"]

[[example]]
name = "poem"
required-features = ["poem", "xml"]