[package]
name = "problem_details"
version = "0.6.0"
authors = ["Markus Gasser <markus.gasser@mailbox.org>"]
edition = "2021"
description = "RFC 9457 / RFC 7807 problem details for HTTP APIs."
repository = "https://github.com/frenetisch-applaudierend/problem-details-rs"
license = "MIT OR Apache-2.0"
keywords = ["http", "problem-details", "rfc9457", "rfc7807"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "experimental" }

[dependencies]
http = "1.0"

# Optional Dependencies
axum = { version = "0.8", default-features = false, features = ["json"], optional = true }
http-serde = { version = "2.0", default-features = false, optional = true }
poem = { version = "3.1", default-features = false, optional = true }
quick-xml = { version = "0.37", default-features = false, features = ["serialize"], optional = true }
serde = { version = "1.0", default-features = false, features = ["serde_derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
axum = "0.8"
poem = "3.1"
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }

[features]
default = ["serde", "json"]
serde = ["dep:serde", "dep:http-serde"]
json = ["serde", "dep:serde_json"]
xml = ["serde", "dep:quick-xml"]
axum = ["dep:axum"]
poem = ["dep:poem"]

[[example]]
name = "axum"
required-features = ["axum", "json", "xml"]

[[example]]
name = "poem"
required-features = ["poem", "json", "xml"]
