[package]
name = "problem_details"
version = "0.8.0"
authors = ["Markus Gasser <markus.gasser@mailbox.org>"]
edition = "2024"
description = "RFC 9457 / RFC 7807 problem details for HTTP APIs."
repository = "https://github.com/frenetisch-applaudierend/problem-details-rs"
license = "MIT OR Apache-2.0"
keywords = ["http", "problem-details", "rfc9457", "rfc7807"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
http = "1.0"

# Optional Dependencies
axum = { version = "0.8", default-features = false, features = ["json"], optional = true }
http-serde = { version = "2.1", default-features = false, optional = true }
poem = { version = "3.1", default-features = false, optional = true }
quick-xml = { version = "0.38", default-features = false, features = ["serialize"], optional = true }
serde = { version = "1.0", default-features = false, features = ["serde_derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["std"], optional = true }
actix-web = { version = "4.11", default-features = false, optional = true }
utoipa = { version = "5.4", default-features = false, features = ["macros", "url"], optional = true }

[dev-dependencies]
axum = "0.8"
poem = "3.1"
actix-web = "4.11"
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
utoipa-axum = "0.2"

[features]
default = ["serde", "json"]
serde = ["dep:serde", "dep:http-serde"]
json = ["serde", "dep:serde_json"]
xml = ["serde", "dep:quick-xml"]
axum = ["dep:axum"]
poem = ["dep:poem"]
actix = ["dep:actix-web"]
utoipa = ["dep:utoipa"]

[[example]]
name = "axum"
required-features = ["axum", "json", "xml"]

[[example]]
name = "poem"
required-features = ["poem", "json", "xml"]

[[example]]
name = "actix"
required-features = ["actix", "json", "xml"]

[[example]]
name = "axum-utoipa"
required-features = ["axum", "json", "xml", "utoipa"]
